GISAID bar plots: scaled sample count + variant count per country

--- a/src/EBI_analysis/create_general_insights.ipynb
+++ b/src/EBI_analysis/create_general_insights.ipynb
@@ -307,17 +307,13 @@
     "    # Normalize height of bars with number of inhabitants\n",
     "    max_y = 0\n",
     "    n_countries = len(popular_countries['country'].unique())\n",
-    "    hue_index = 0\n",
     "\n",
     "    for i, patch in enumerate(ax.patches):\n",
-    "        if i % n_countries == 0 and i != 0:\n",
-    "            hue_index += 1\n",
-    "        country = ax.get_xticklabels()[i - (hue_index * n_countries)].get_text()\n",
-    "\n",
+    "        country = ax.get_xticklabels()[i % n_countries].get_text()\n",
     "        new_height = patch.get_height() / country_inhabitants_map[country]\n",
-    "        max_y = max(max_y, new_height)\n",
     "        patch.set_height(new_height)\n",
     "\n",
+    "        max_y = max(max_y, new_height)\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
     "    fig.savefig(f'../../plots/general_country_counts/popular_countries_count_by_{hue}_normalized.png', dpi=300)\n",
@@ -352,21 +348,17 @@
     "\n",
     "    # Normalize height of bars with number of inhabitants\n",
     "    max_y = 0\n",
-    "    n_countries = len(rare_countries['country'].unique())\n",
-    "    hue_index = 0\n",
+    "    n_countries = len(popular_countries['country'].unique())\n",
     "\n",
     "    for i, patch in enumerate(ax.patches):\n",
-    "        if i % n_countries == 0 and i != 0:\n",
-    "            hue_index += 1\n",
-    "        country = ax.get_xticklabels()[i - (hue_index * n_countries)].get_text()\n",
-    "\n",
+    "        country = ax.get_xticklabels()[i % n_countries].get_text()\n",
     "        if country == 'Unknown':\n",
     "            new_height = 0.0\n",
     "        else:\n",
     "            new_height = patch.get_height() / country_inhabitants_map[country]\n",
+    "        patch.set_height(new_height)\n",
     "\n",
     "        max_y = max(max_y, new_height)\n",
-    "        patch.set_height(new_height)\n",
     "    plt.gca().set_ylim([0, max_y + (max_y / 20)])\n",
     "\n",
     "    fig.savefig(f'../../plots/general_country_counts/rare_countries_count_by_{hue}_normalized.png', dpi=300)\n",
