--- a/src/GISAID_analysis/preprocess_metadata.ipynb
+++ b/src/GISAID_analysis/preprocess_metadata.ipynb
@@ -87,23 +87,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 1,
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "<class 'dask.dataframe.core.DataFrame'>\n",
-      "Columns: 21 entries, covv_accession_id to covv_variant\n",
-      "dtypes: object(15), bool(3), float64(2), int64(1)"
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "Int64Index: 6949765 entries, 0 to 52810\n",
+      "Data columns (total 21 columns):\n",
+      " #   Column                     Dtype  \n",
+      "---  ------                     -----  \n",
+      " 0   covv_accession_id          object \n",
+      " 1   covv_clade                 object \n",
+      " 2   covv_collection_date       object \n",
+      " 3   covsurver_prot_mutations   object \n",
+      " 4   covsurver_uniquemutlist    object \n",
+      " 5   covv_orig_lab              object \n",
+      " 6   covv_passage               object \n",
+      " 7   covv_subm_lab              object \n",
+      " 8   gc_content                 float64\n",
+      " 9   covv_host                  object \n",
+      " 10  is_high_coverage           bool   \n",
+      " 11  is_reference               bool   \n",
+      " 12  is_complete                bool   \n",
+      " 13  covv_lineage               object \n",
+      " 14  pangolin_lineages_version  object \n",
+      " 15  covv_location              object \n",
+      " 16  n_content                  float64\n",
+      " 17  sequence_length            int64  \n",
+      " 18  covv_subm_date             object \n",
+      " 19  covv_type                  object \n",
+      " 20  covv_variant               object \n",
+      "dtypes: bool(3), float64(2), int64(1), object(15)\n",
+      "memory usage: 1.0+ GB\n"
      ]
     }
    ],
    "source": [
     "import dask.dataframe as dd\n",
+    "import pandas as pd\n",
     "\n",
     "gisaid_metadata = dd.read_csv('../../data/gisaid_metadata.tsv', encoding='iso-8859-1', delimiter='\\t')\n",
-    "gisaid_metadata.info()  # -> 21 columns: 15 string, 3 bool, 2 float & 1 integer"
+    "gisaid_metadata = gisaid_metadata.compute()\n",
+    "gisaid_metadata.info()"
    ],
    "metadata": {
     "collapsed": false,
@@ -199,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -225,6 +252,115 @@
   {
    "cell_type": "markdown",
    "source": [
+    "## Data Enrichment\n",
+    "\n",
+    "### Country"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Europe / United Kingdom / England                                                1382051\nNorth America / USA / California                                                  196196\nEurope / United Kingdom / Scotland                                                159874\nEurope / United Kingdom / Wales                                                   142306\nEurope / Denmark / Hovedstaden                                                    136354\n                                                                                  ...   \nEurope / Belgium / Lamine                                                              1\nEurope / Belgium / Lo                                                                  1\nEurope / Belgium / Bevere                                                              1\nEurope / Belgium / Aisemont                                                            1\nEurope / Czech Republic / Vysocina Region / Nova Ves u Noveho Mesta na Morave          1\nName: covv_location, Length: 26054, dtype: int64"
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "gisaid_metadata['covv_location'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "array(['Germany', 'Israel', 'Denmark', 'USA', 'Colombia',\n       'United Kingdom', 'Cyprus', 'Mexico', 'Italy', 'Belgium', 'Spain',\n       'Netherlands', 'Cambodia', 'Brazil', 'Japan', 'Switzerland',\n       'Norway', 'New Zealand', 'Australia', 'Slovenia', 'France',\n       'Canada', 'Kenya', 'Ireland', 'South Africa', 'Zimbabwe', 'Togo',\n       'Poland', 'Czech Republic', 'Malaysia', 'Turkey', 'Philippines',\n       'Argentina', 'Austria', 'Bonaire', 'Guadeloupe', 'Martinique',\n       'Kuwait', 'Niger', 'Curacao', 'Aruba', 'India', 'Romania',\n       'Croatia', 'Ghana', 'Cayman Islands', 'Indonesia', 'Maldives',\n       'Ecuador', 'Kazakhstan', 'Sweden', 'Sint Maarten', 'Puerto Rico',\n       'Taiwan', 'Portugal', 'Malawi', 'Angola', 'Estonia', 'Singapore',\n       'Malta', 'Nigeria', 'Thailand', 'Greece', 'Hong Kong',\n       'South Korea', 'Lithuania', 'Gibraltar', 'Namibia', 'Egypt',\n       'Costa Rica', 'U.S. Virgin Islands', 'Venezuela', 'Russia',\n       'Guyana', 'Peru', 'Burkina Faso', 'Iran', 'Slovakia',\n       'French Guiana', 'Guam', 'Equatorial Guinea', 'Grenada',\n       'Bangladesh', 'Botswana', 'Iraq', 'Paraguay', 'Nepal', 'Sri Lanka',\n       'Kosovo', 'Ethiopia', 'Bulgaria', 'Bosnia and Herzegovina',\n       'Guinea', 'Democratic Republic of the Congo', 'Finland', 'Morocco',\n       'Chile', 'Antigua and Barbuda', 'Barbados', 'Saint Lucia',\n       'Trinidad and Tobago', 'Dominican Republic', 'Haiti', 'Bolivia',\n       'Qatar', 'Hungary', 'Monaco', 'China', 'Central African Republic',\n       'Papua New Guinea', 'Mauritius', 'Reunion', 'French Polynesia',\n       'Rwanda', 'Somalia', 'Pakistan', 'British Virgin Islands',\n       'Georgia', 'Brunei', 'Canary Islands', 'Saudi Arabia', 'Uganda',\n       'Lebanon', 'Liechtenstein', 'Vietnam', 'Guatemala', 'Mayotte',\n       'Gambia', 'Luxembourg', 'Northern Mariana Islands',\n       'North Macedonia', 'Mozambique', 'Anguilla', 'Jordan', 'Latvia',\n       'Senegal', 'Zambia', 'Bahrain', 'Djibouti', 'Jamaica', 'Libya',\n       'Republic of the Congo', 'Myanmar', 'Tunisia', 'Ukraine', 'Gabon',\n       'Benin', 'Oman', 'Burundi', 'South Sudan', 'Serbia', 'Azerbaijan',\n       'Timor-Leste', 'Cabo Verde', 'Uruguay', 'Liberia', 'Cameroon',\n       'The Bahamas', 'Chad', 'Belize', 'Andorra', 'Uzbekistan',\n       'United Arab Emirates', 'Cuba', 'El Salvador', 'Mali', 'Crimea',\n       'Belarus', 'Suriname', 'Algeria', 'Comoros', 'Madagascar',\n       'Bermuda', 'Dominica', 'Montenegro', 'Iceland', 'Guinea-Bissau',\n       'Moldova', 'Honduras', 'Armenia', 'Sierra Leone', \"Cote d'Ivoire\",\n       'Mongolia', 'Sudan', 'Saint Martin', 'Afghanistan', 'Palestine',\n       'Panama', 'Solomon Islands', 'Lesotho', 'Fiji', 'Seychelles',\n       'Montserrat', 'Saint Barthelemy', 'Faroe Islands', 'Syria',\n       'Saint Vincent and the Grenadines', 'Wallis and Futuna Islands',\n       'Palau', 'Eswatini', 'Saint Kitts and Nevis',\n       'Turks and Caicos Islands', 'Albania', 'Sint Eustatius', 'Vanuatu',\n       'Laos'], dtype=object)"
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Extract country from location consisting of at least the continent (index 0) and country (index 1)\n",
+    "gisaid_metadata['country'] = gisaid_metadata['covv_location'].apply(lambda loc: loc.split('/')[1].strip())\n",
+    "gisaid_metadata['country'].unique()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### WHO Label of Virus Variant\n",
+    "\n",
+    "Structure of covv_variant column:\n",
+    "\n",
+    "`VOI/VOC/VUM <WHO_label> <GISAID_clade> (<Pango_lineage>) first detected in <location>`"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%% md\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "Delta      3992087\nUnknown    1210817\nAlpha      1145490\nOmicron     276164\nGamma       120122\nEpsilon      68135\nIota         42909\nBeta         41000\nMu           14769\nLambda        9572\nEta           9424\nKappa         8150\nZeta          5506\nTheta          624\nB.1.640        456\nName: variant_WHO_label, dtype: int64"
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Add column with short version of variant names\n",
+    "# \"Unknown\" is set, if covv_variant is NaN\n",
+    "gisaid_metadata['variant_WHO_label'] = gisaid_metadata['covv_variant'].apply(lambda name: str(name).split(' ')[1] if 'first' in str(name) else 'Unknown')\n",
+    "\n",
+    "# Rename GISAID clade \"GH/490R\" to short version of Pango lineage \"B.1.640+B.1.640.*\"\n",
+    "# Was added as name of this variant has no WHO label like \"Alpha\" etc.\n",
+    "gisaid_metadata['variant_WHO_label'] = gisaid_metadata['variant_WHO_label'].replace('GH/490R', 'B.1.640')\n",
+    "\n",
+    "gisaid_metadata['variant_WHO_label'].value_counts()"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
     "## Export as CSV"
    ],
    "metadata": {
@@ -236,20 +372,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "['C:/Users/ninai/OneDrive/Dokumente/Studium/Module/Master/4. Semester/Accountability in AI/Sampling Bias/sampling-bias-cov19/data/gisaid_metadata_preprocessed.csv']"
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "execution_count": 3,
+   "outputs": [],
    "source": [
-    "# Store cleaned GISAID metadata as CSV file\n",
-    "gisaid_metadata.to_csv('../../data/gisaid_metadata_preprocessed.csv', single_file=True, index=False)"
+    "# Store preprocessed GISAID metadata as CSV file\n",
+    "gisaid_metadata.to_csv('../../data/gisaid_metadata_preprocessed.csv', index=False)"
    ],
    "metadata": {
     "collapsed": false,
