Plot percentage of sequenced cases per country over time

--- a/src/EBI_analysis/analyze_us_states.ipynb
+++ b/src/EBI_analysis/analyze_us_states.ipynb
@@ -741,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 155,
+   "execution_count": 2,
    "outputs": [
     {
      "name": "stdout",
@@ -825,6 +825,7 @@
    "execution_count": null,
    "outputs": [],
    "source": [
+    "# Get cumulative number of infections\n",
     "def get_n_infections(state):\n",
     "    return usa_states_hopkins[usa_states_hopkins['Province_State'] == state]['Confirmed'].iloc[0]\n",
     "\n",
