--- a/src/EBI_analysis/create_general_insights.ipynb
+++ b/src/EBI_analysis/create_general_insights.ipynb
@@ -825,7 +825,8 @@
     "\n",
     "def add_infection(country):\n",
     "    if country in countries_ts['Country/Region'].unique():\n",
-    "        return countries_ts[countries_ts['Country/Region'] == country]['1/9/22'].iloc[0]\n",
+    "        return countries_ts[countries_ts['Country/Region'] == country]['1/9/22'].iloc[0] \\\n",
+    "               - countries_ts[countries_ts['Country/Region'] == country]['1/8/22'].iloc[0]\n",
     "    else:\n",
     "        return np.nan\n",
     "\n",
@@ -950,6 +951,26 @@
     "                                  '1/27/20', '1/28/20', '1/29/20', '1/30/20', '1/31/20', '2/1/20', '2/2/20'],  # remove fifth week\n",
     "                                 axis=1)\n",
     "countries_ts.columns"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Calculate number of new cases instead of cumulative number of cases & overwrite with new values\n",
+    "new_cases = countries_ts[['Province/State', 'Country/Region', 'Lat', 'Long']].copy()\n",
+    "\n",
+    "for i, col in enumerate(countries_ts.columns[5:]):\n",
+    "    new_cases[col] = countries_ts[col] - countries_ts.iloc[:, i+4]\n",
+    "\n",
+    "countries_ts = new_cases.copy()"
    ],
    "metadata": {
     "collapsed": false,
