--- a/src/GISAID_analysis/preprocess_metadata.ipynb
+++ b/src/GISAID_analysis/preprocess_metadata.ipynb
@@ -343,6 +343,21 @@
    }
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "# Add uniform naming for Congo\n",
+    "gisaid_metadata['country'] = gisaid_metadata['country'].replace('Republic of the Congo', 'Democratic Republic of the Congo')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
    "cell_type": "markdown",
    "source": [
     "### WHO Label of Virus Variant\n",
