Cleanup und adjust plots for report

--- a/src/GISAID_analysis/preprocess_metadata.ipynb
+++ b/src/GISAID_analysis/preprocess_metadata.ipynb
@@ -115,10 +115,7 @@
     {
      "name": "stderr",
      "output_type": "stream",
-     "text": [
-      "c:\\users\\ninai\\onedrive\\dokumente\\studium\\module\\master\\4. semester\\accountability in ai\\sampling bias\\sampling-bias-cov19\\venv\\lib\\site-packages\\dask\\dataframe\\io\\csv.py:136: DtypeWarning: Columns (20) have mixed types.Specify dtype option on import or set low_memory=False.\n",
-      "  path_info,\n"
-     ]
+     "text": []
     },
     {
      "name": "stdout",
@@ -392,7 +389,7 @@
     "gisaid_metadata['variant_WHO_label'] = gisaid_metadata['covv_variant'].apply(lambda name: str(name).split(' ')[1] if 'first' in str(name) else 'Unknown')\n",
     "\n",
     "# Rename GISAID clade \"GH/490R\" to short version of Pango lineage \"B.1.640+B.1.640.*\"\n",
-    "# Was added as name of this variant has no WHO label like \"Alpha\" etc.\n",
+    "# Was added as name of this variant as no WHO label like \"Alpha\" exists\n",
     "gisaid_metadata['variant_WHO_label'] = gisaid_metadata['variant_WHO_label'].replace('GH/490R', 'B.1.640')\n",
     "\n",
     "gisaid_metadata['variant_WHO_label'].value_counts()"
